# SimpleCRUD

./: .gitignore  .gitmodules  CMakeLists.txt  make_vs_solution.bat  make_vs_solution_v100.bat  make_vs_solution_v147.bat
SimpleCRUD/: CMakeLists.txt  main.cpp
SimpleCRUD/src/: Member.cpp  Member.h  SqlTemplate.cpp  SqlTemplate.h
SimpleCRUDTest/: CMakeLists.txt  MemberTest.cpp  test_main.cpp
SimpleCRUDTest/tests/: MemberTest.cpp
SimpleCRUDTest/tests/sqlite3/: Sqlite3Tran_Test.cpp
